* Campaign Out: Add Failure Code and Failure Cause to CSV report. This reports
  the failure cause reported when a call attempt failed.
* Dialer: init script MUST specify signal to send to shutdown process. Otherwise
  killproc timeouts and sends SIGKILL to monitor process.
* Agent Console: add support for opening external URLs for a connected call.
  External URLs can be opened in three different ways: as a new window, as an
  embedded frame inside a tab in the agent console, or as a JSONP call that 
  loads and executes Javascript in the context of the agent console.
* Campaign In: add support for linking external URLs to a campaign.
* Campaign Out: add support for linking external URLs to a campaign.
* Dialer (ECCP): extend "getcampaigninfo" request to report external URLs
* External URL: new module for management of external URLs to be opened on each
  connected call.
* Agent Console: when reading ECCP password for agent, only active agents should
  be considered. Fixes Elastix bug #1157.
* Dialer (ECCP): protocol change: the agentloggedin and agentloggedout events
  no longer report agent membership to queues. The effort required to parse
  the output of "queue show" scales linearly with the number of agents in 
  queues, and also with the number of queues defined, resulting in noticeable
  lags in ECCP performance. A new request "getagentqueues" has been added in
  case a client really needs this information.
* Dialer: (almost) complete rewrite of the central code.
  During a deployment with a moderately large number of agents, several design
  flaws were uncovered in the dialer code. The largest of such design flaws was
  the attempt to handle all of the operations of the dialer in a single process.
  Coupled with this, several event handlers required synchronous database 
  updates or reads, and in at least one handler, a database access with every
  single event, whether the event was from a handled call or not. In addition to