@@ -2122,6 +2122,48 @@ Para agente no encontrado, o no logoneado vía ECCP:
     </transfercall_response>
 </response>
 
+Requerimiento "atxfercall"
+
+Este requerimiento se usa para transferir la llamada que atiende el agente, a
+otra extensión o a otro número externo, con confirmación del número transferido.
+Al momento de transferir la llamada, el agente se conecta con el número destino
+de la transferencia, y si el agente usa el requerimiento hangup para colgar,
+queda libre para recibir otra llamada. Actualmente no está soportada la 
+transferencia hacia otro agente de campaña, o hacia una cola de campañas.
+
+Atributos o argumentos:
+* agent_number: Agente que se va a pausar. Este identificador está de la forma 
+  'Agent/9000'.
+* agent_hash: Hash de autenticación para el agente.
+* extension:  Número de la extensión o número externo al cual mandar la llamada.
+
+Ejemplo:
+<request id="11">
+    <atxfercall>
+        <agent_number>Agent/9000</agent_number>
+        <agent_hash>XXXXXXXXXXXXXXXXXXXXXXXXX</agent_hash>
+        <extension>4321</extension>
+    </atxfercall>
+</request>
+
+Respuesta:
+Para caso de éxito:
+<response id="11">
+    <atxfercall_response>
+        <success/>
+    </atxfercall_response>
+</response>
+
+Para agente no encontrado, o no logoneado vía ECCP:
+<response id="11">
+    <atxfercall_response>
+        <failure>
+            <code>404</code>
+            <message>Agent not found or not logged in through ECCP</message>
+        </failure>
+    </atxfercall_response>
+</response>
+
 
 Requerimiento "pauseagent"
 
